@@ -1,3 +1,10 @@
+2005-03-21(jol):
+	- Add egxp_node_print to display the defined protocol,
+	- Add egxp_display to show all information to the egxp structure,
+	- Now, it's forbidden to add condition to a node if the node is already registered to its parent,
+	- Code refactoring, use of xmpp_opcode_iq in xmpp_opcode_init and xmpp_im_opcode_init,
+	- Continue to work on the XmppIM -> make some stuff to fill the roster.
+
 2005-03-19(jol):
 	- Continue to work on the XmppIM -> make some stuff to fill the roster
 	- Add xmpp_im_callback and xmpp_im_opcode files
